completed form on new.ejs:

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="/styles/base.css"/>
 </head>
 <body>
-  Hi, Cait, Vij, Ally!
+  <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
 </body>
 </html>
