started CSS work for feature 5

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,9 @@
   <title>Document</title>
   <link rel="stylesheet" type="text/css" href="/styles/reset.css"/>
   <link rel="stylesheet" href="/styles/base.css"/>
+  <link rel="stylesheet" href="/styles/icons.css/">
+  <link rel="stylesheet" href="/styles/modules.css"/>
+  <link rel="stylesheet" href="/styles/layout.css"/>
 </head>
 <body>
   <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
