--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -1,4 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background-color: aqua;
-  /* font-size: 40px; */
+  /* background-color: darkgrey; */
+  color: white;
+}
+
+
+
+
+
+h3 { 
+  font-size: 20px;
 }
