--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -8,16 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="/styles/reset.css"/>
     <link rel="stylesheet" href="/styles/base.css"/>
+    <link rel="stylesheet" href="/styles/icons.css/">
+    <link rel="stylesheet" href="/styles/modules.css"/>
+    <link rel="stylesheet" href="/styles/layout.css"/>
 </head>
 
 <body>
     <ul>
         <% books.forEach(obj => { %>
-        <li><%= obj.title %></li>
-        <li><%= obj.authors %></li>
-        <li><%= obj.description %></li>
-        <li><%= obj.publishedDate %></li>
-        <li><%= obj.infoLink %></li>
+        <h3><%= obj.title %></h3>
+        <p><%= obj.authors %></p>
+        <p><%= obj.publishedDate %></p>
+        <p><%= obj.description %></p>
+        <p><%= obj.infoLink %></p>
         <% }) %>
     </ul>
 </body>
