--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -20,7 +20,7 @@
   <main>
     <h2>Search by Title or Author</h2>
     <form action="/searches/new" method="post">
-      <input type="text" name="search" placeholder="enter title or author" required>
+      <input type="text" name="search" placeholder="Enter title or author" required>
       <fieldset>
         <label for="title">
           <div>Title</div>
