fixed database and details.ejs

--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -15,7 +15,7 @@
 
 <body>
 
-    <form action="/books/details" method="post">
+    <form action="/books" method="post">
         <section>
             <% books.forEach(obj => { %>
                 <img src='<%= obj.image_url %>' alt='<%= obj.title %>''></img> 
