--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -22,6 +22,11 @@
                 <h2><%= obj.title %></h2>
                     <p><%= obj.authors %></p>
                     <p><%= obj.description %></p>
+                    <!-- <input type="text" name="title" value= "<%= xxx %>">
+                    <input type="text" name="title" value= "<%= xxx %>">
+                    <input type="text" name="title" value= "<%= xxx %>">
+                    <input type="text" name="title" value= "<%= xxx %>">
+                    <input type="text" name="title" value= "<%= xxx %>"> -->
                     <p><button type="submit">Add to database</button></p>
                     <% }) %>
         </section>
