--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>BEST BOOKS</title>
   <link rel="stylesheet" type="text/css" href="/styles/reset.css"/>
   <link rel="stylesheet" href="/styles/base.css"/>
   <link rel="stylesheet" href="/styles/icons.css/">
@@ -12,6 +12,19 @@
   <link rel="stylesheet" href="/styles/layout.css"/>
 </head>
 <body>
-  <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
+  
+  <section>
+    <ul>
+    <% results.forEach(obj => { %>
+
+      <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
+      
+           <li><%= obj.title %></li>
+           <li><%= obj.authors %></li>
+           
+           <% }) %>
+          </ul>
+    </section>
+
 </body>
 </html>
