--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,16 +16,18 @@
   <section>
     <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
     <ul>
-    <% results.forEach(obj => { %>
-      <form action="/details/<%= obj.id %>" method="post">
-        <li><%= obj.title %></li>
-        <li><%= obj.authors %></li>
-        <button>view details</button>
-      </form>
+      <li> You have <%=results.length%> books in your bookshelf!!</li>
+      <% results.forEach(obj => { %>
+        <form action="/details/<%= obj.id %>" method="post">
+          <li><img src= "<%= obj.image_url %>" alt="<%= obj.title %>"></li>
+          <li><%= obj.title %></li>
+          <li><%= obj.authors %></li>
+          <button>view details</button>
+        </form>
         
-        <% }) %>
-          </ul>
-    </section>
+      <% }) %>
+    </ul>
+  </section>
 
 
 
