made the details.ejs show up with the results from the database

--- a/views/pages/books/details.ejs
+++ b/views/pages/books/details.ejs
@@ -13,5 +13,9 @@
 </head>
 <body>
     Success!!
+    <ul>
+        <li>cait, hi!!!</li>
+        <li><%= results.title %></li>
+    </ul>
 </body>
 </html>
