working on the edit and update bookshelf to show up with partial ejs edit.ejs

--- a/views/pages/books/details.ejs
+++ b/views/pages/books/details.ejs
@@ -21,5 +21,6 @@
         <li><%= results.bookshelf %></li>
 
     </ul>
+    <%- include('edit', {formAction: 'update', results: results}) %>
 </body>
 </html>
