--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,7 @@
         <li><%= obj.title %></li>
         <li><%= obj.authors %></li>
         <li><img src="<%= obj.image_url %>" alt="<%= obj.title %>"></li>
+        <li><%= obj.bookshelf %></li>
         <a href="/books/<%= obj.id %>"> View Details </a>
         
         <% }) %>
