added a header and a head partial to all ejs pages

--- a/views/pages/books/edit.ejs
+++ b/views/pages/books/edit.ejs
@@ -8,7 +8,7 @@
 
   <input type="hidden" name="descript" value= "<%- results.descript %>" placeholder="<%- results.descript %>">
 
-    <input list="bookshelf" name="bookshelf">
+  <input list="bookshelf" name="bookshelf" placeholder="Enter Bookshelf">
 
     <datalist id="bookshelf">
     <option name="bookshelf" value="fiction">
