--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BEST BOOKS</title>
-  <link rel="stylesheet" type="text/css" href="/styles/reset.css"/>
-  <link rel="stylesheet" href="/styles/base.css"/>
-  <link rel="stylesheet" href="/styles/icons.css/">
-  <link rel="stylesheet" href="/styles/modules.css"/>
-  <link rel="stylesheet" href="/styles/layout.css"/>
+    <%- include('../layout/head') %>
 </head>
 <body>
-  
+  <main>
+      <%- include('../layout/header') %>
   <section>
     <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
     <ul>
@@ -27,6 +20,7 @@
           </ul>
     </section>
 
+  </main>
 
 
 </body>
