--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -2,19 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/styles/reset.css" />
-    <link rel="stylesheet" href="/styles/base.css" />
-    <link rel="stylesheet" href="/styles/icons.css/">
-    <link rel="stylesheet" href="/styles/modules.css" />
-    <link rel="stylesheet" href="/styles/layout.css" />
+        <%- include('../../layout/head') %>
+
 </head>
 
 <body>
 
+    <main>
+            <%- include('../../layout/header') %>
     <section>
         <% books.forEach(obj => { %>
 
@@ -34,6 +29,8 @@
             </form>
             <% }) %>
         </section>
+    </main>
+
 
 </body>
 
