--- a/views/pages/books/details.ejs
+++ b/views/pages/books/details.ejs
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
-        <link rel="stylesheet" type="text/css" href="/styles/reset.css" />
-        <link rel="stylesheet" href="/styles/base.css" />
-        <link rel="stylesheet" href="/styles/icons.css/">
-        <link rel="stylesheet" href="/styles/modules.css" />
-        <link rel="stylesheet" href="/styles/layout.css" />
+        <%- include('../../layout/head') %>
+
 </head>
 <body>
-        <a href="/"> Home Page </a>
+        <%- include('../../layout/header') %>
+
     <ul>
         <li><%= results.title %></li>
         <li><%= results.authors %></li>
