tried delete button but failed

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,7 +3,7 @@
     <nav class="navBar">
       <ul>
         <li><a href="/">View All Books</a></li>
-        <li><a href="/searches/new">Search Book</a></li>
+        <li><a href="/searches/new">New Search </a></li>
       </ul>
     </nav>
   </header>
