delete button working along with the update

--- a/views/pages/books/details.ejs
+++ b/views/pages/books/details.ejs
@@ -15,6 +15,7 @@
         <li><%= results.bookshelf %></li>
 
     </ul>
+    <%- include('edit_delete', {formAction: 'delete', results: results}) %>
     <%- include('edit', {formAction: 'update', results: results}) %>
 </body>
 </html>
