--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,10 +2,24 @@
 <html lang="en">
 <head>
     <%- include('../layout/head') %>
+
 </head>
 <body>
   <main>
-      <%- include('../layout/header') %>
+      <aside class="dropdown">
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+          <nav class="navBar">
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/searches/new">New Search </a></li>
+              </ul>
+          </nav>
+      </aside>
+
   <section>
     <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
     <ul>
