--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,15 +1,52 @@
 
+.dropdown {
+  display: flexbox;
+}
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.navBar{
+  display: none;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+/* Links inside the dropdown */
+.navBar a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.navBar a:hover {background-color: rgb(228, 113, 113); color: black;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .navBar {display: block;}
+
+
+#title {
+  font-family: cursive;
+  font-size: 35px;
+}
+
+
 li{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 1em;
   margin-bottom: 10px;
   font-size: 20px;
   margin: auto;
-}
-
-#title {
-  font-family: cursive;
-  font-size: 35px;
 }
 
 a{
@@ -28,6 +65,7 @@ button {
   box-shadow: olive;
   background-color: papayawhip;
 }
+
 input, option{
   font-size: 25px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
