--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,8 +1,7 @@
 <header>
-    <h1>My Book List</h1>
     <nav class="navBar">
       <ul>
-        <li><a href="/">View All Books</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/searches/new">New Search </a></li>
       </ul>
     </nav>
