adding stretch goals

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,20 +6,7 @@
 </head>
 <body>
   <main>
-      <aside class="dropdown">
-        <div class="container">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
-          <nav class="navBar">
-              <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/searches/new">New Search </a></li>
-              </ul>
-          </nav>
-      </aside>
-
+      <%- include('../layout/header') %>
   <section>
     <h1>Hi, Cait, Vij, Ally! Lets read some books together</h1>
     <ul>
