--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,8 +1,15 @@
 <header>
-    <nav class="navBar">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/searches/new">New Search </a></li>
-      </ul>
-    </nav>
+    <aside class="dropdown">
+        <div class="container">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+        </div>
+          <nav class="navBar">
+              <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/searches/new">New Search </a></li>
+              </ul>
+          </nav>
+      </aside>
   </header>
