--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -14,9 +14,12 @@
 
 </head>
 <body>
+  <%- include('../../layout/header') %>
+
   <header> 
     <h1>Best Books!</h1>
   </header>
+  
   <main>
     <h2>Search by Title or Author</h2>
     <form action="/searches/new" method="post">
