updated the index page to include bookshelves as well

--- a/views/pages/books/edit.ejs
+++ b/views/pages/books/edit.ejs
@@ -11,9 +11,9 @@
   <input list="bookshelf" name="bookshelf" placeholder="Enter Bookshelf">
 
     <datalist id="bookshelf">
-    <option name="bookshelf" value="fiction">
-    <option name="bookshelf" value="non-fiction">
-    <option name="bookshelf" value = "drama">
+    <option name="bookshelf" value="fiction"></option>
+    <option name="bookshelf" value="non-fiction"></option>
+    <option name="bookshelf" value = "drama"></option>
     </datalist> 
     <input type="submit">
 
