--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,6 +15,7 @@
         <li>By <%= obj.authors %></li>
         <li><img src="<%= obj.image_url %>" alt="<%= obj.title %>"></li>
         <li><%= obj.bookshelf %></li>
+        <li>Bookshelf: <%= obj.name%></li>
         <a href="/books/<%= obj.id %>"> View Details </a>
         
         <% }) %>
